# Walk2Robot

V1/donnees_traitees/: caracteristiques_ergocub.csv  cibles_y.npy  parametres_normalisation.npy  sequences_X.npy
V1/resultats_modele/: cibles_test.npy  metriques.txt  modele_mlp_posture.joblib  predictions.npy
V1/resultats_robotique/: commandes_articulaires_predites.csv  messages_ros2_simules.txt  resume_integration_robotique.txt  table_correspondance_quadrupede.csv
V1/scripts/: integration_robotique.py  lire_dataset.py  modele_apprentissage.py  ouverture.py  pretraitement.py
V2/: .gitignore  requirements.txt
V2/donnees_brutes/: source_jeu_donnees.md
V2/espace_ros2/src/phase_marche_ros2/: package.xml  setup.py
V2/espace_ros2/src/phase_marche_ros2/phase_marche_ros2/: __init__.py  controleur_assistance_robot.py  moniteur_performance_ros2.py  noeud_inference_phase_marche.py  publieur_caracteristiques_marche.py
V2/espace_ros2/src/phase_marche_ros2/resource/: phase_marche_ros2
V2/marche_v2/: __init__.py  caracteristiques.py  config.py  donnees_synth.py  fichiers.py  graphiques.py  jeu_donnees_hd.py  modeles_simples.py  ouverture.py
V2/scripts/: 01_preparer_donnees.py  02_inspecter_donnees.py  03_synchroniser_modalites.py  04_qualite_signaux.py  05_pretraiter_signaux.py  06_extraire_caracteristiques.py  07_entrainer_modele.py  08_evaluer_par_sujet.py  09_exporter_modele.py
